@@ -1,3 +1,9 @@
+** v4.22 06.06.2019**
+* Updated compatibility with ElvUI_NihilisUI.
+* Updated Enhanced Nameplate Auras to display the Player Name on CC Buffs, with help from Nihili <3
+* Added new Font Expressway Bold and use it. (You need to run the Installer again)
+* Small Layout update. (You need to run the Installer again) if you want it.
+
 ** v4.21 01.06.2019**
 * Added new Tag: 'name:abbrev-translit'
 * Return of the Enhanced Nameplate Auras. All Credits belong to: NihilisticPandemonium.
